[package]
name = "warpd-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.1", features = ["derive", "env", "string", "unicode"] }
enigo = { version = "0.2.0", features = ["x11rb"] }
x11rb = { version = "0.13.1", features = ["xtest"] }
